SCSS/WWNTBM-MOS.scss
/* ... */
/**
 * 16.0 - WP Courseware
 */

.page-template-template-mos .module {
    position: relative;
    margin-bottom: 2em;

    @media screen and (min-width: 1200px) { width: calc(25% - 2em); }
    @media screen and (min-width: 800px) and (max-width: 1199px) { width: calc(33% - 1em); }
    @media screen and (min-width: 400px) and (max-width: 799px) { width: calc(50% - 1em); }
    @media screen and (max-width: 399px) { width: 100%; }

    img {
        opacity: 0.5;
        transition: all .3s ease;
    }
    &:hover img { opacity: 0.3; }

    h2 {
        transition: all .3s ease;
        font-family: $font-stack-sans-serif;
        font-weight: 400;

        em {
            display: block;
            font-size: .75em;
        }

        @media screen and (min-width: 600px) and (max-width: 800px) { font-size: 1.75rem; }
        @media screen and (min-width: 300px) and (max-width: 400px) { font-size: 1.75rem; }
    }

    &-container {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
    }
}

.module-header {
    position: relative;
    margin-bottom: 2em;

    .module-title { padding: 1em; }

    img { opacity: 0.5; }
}

h1.module-title,
.module-container .module h2 {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: 0;
    padding: 2em 0.5em 0.5em;
    text-align: center;
    color: white;
    border-width: 0 0 .5em;
    border-style: solid;

    em {
        font-family: $font-stack-serif;
        font-style: italic;
        font-weight: 300;
    }
}

@each $key, $color-code in $border-colors {
    .page-template-template-mos .module.#{$key} h2,
    .page-#{$key} h1.module-title {
        border-image: linear-gradient(to right,
            map-get($border-colors, $key) 0, map-get($border-colors, $key) 33%,
            darken(map-get($border-colors, $key), 10%) 33%, darken(map-get($border-colors, $key), 10%) 66%,
            darken(map-get($border-colors, $key), 20%) 66%, darken(map-get($border-colors, $key), 20%) 100%
        ) 10;
    }
}



.wpcw_clear {
    clear: both;
    height: 1px;
    padding: 0;
    margin: 0;
    line-height: 1px;
}

/* Shortcode - Course Progress */
#wpcw_fe_course_progress {
    font-size: 10pt;
    border-spacing: 0;
    border-radius: 3px;
    border: 1px solid #DDD;
    border-bottom: 0;

    td {
        padding: 10px 15px;
        border: 0;
        border-bottom: 1px solid #ddd;
    }

    th {
        padding: 5px 15px;
        border: 0;
        border-bottom: 1px solid #ddd;
        font-weight: bold;
        background-color: #F1F1F1;
        background-image: linear-gradient(to bottom, #F9F9F9, #DCDCDC);
        background-color: #F1F1F1;
    }

    .wpcw_fe_course_progress_grade, .wpcw_fe_course_progress_pc { text-align: center; }

    .wpcw_fe_course_progress_grade { font-weight: bold; }

    #wpcw_fe_course {
        margin: 0;
        background: #fff;
    }

    td.wpcw_fe_course_progress_detail {
        padding: 5px;
        background: #efefef;
        display: none;
    }

    .wpcw_fe_course_progress_course { line-height: 20px; }

    .wpcw_fe_course_progress_course a {
        background: url('img/icon_toggle_closed.png') no-repeat 0 3px;
        padding-left: 22px;
        display: block;
        font-size: 1.5em;
        font-weight: 700;
    }

    .wpcw_fe_course_progress_course.active a { background-image: url('img/icon_toggle_open.png'); }

    td.wpcw_fe_course_progress_detail #wpcw_fe_course td { padding: 2px 5px; }
}

/* Course Header */
.wpcw_fe_course_title {
    font-size: 18pt;
}

.wpcw_fe_course_desc {
    font-size: 12pt;
    margin: 10px 0 30px;
}

/* Course Details */
#wpcw_fe_course {
    border: none;
    table-layout: fixed;

    tr:nth-child(even) { background-color: rgba(white, 0.1); }

    td {
        padding: 10px 15px;
        border: none;

        &.duration { text-align: right; }
    }

    tr.wpcw_fe_module td:first-child { font-size: 0; }

    .content-area & td {
        &:nth-child(1) { width: 20%; }
        &:nth-child(2) { width: 55%; }
        &:nth-child(3) {
            width: 15%;
            word-wrap: normal;
        }
        &:nth-child(4) { width: 10%; }
    }

    .wpcw_fe_unit_none td {
        color: #AAA;
        text-align: center;
    }

    .wpcw_fe_module td {
        font-weight: bold;
        border: none;
    }

    .wpcw_fe_unit a { font-weight: bold; }
}

/* Widget Progress */
.wpcw_widget_progress {
    tr:first-child { display: none; }

    td:first-child { width: 5em; }
    td.duration { width: 4em; }

    #wpcw_fe_course {
        font-size: 9pt;

        td { padding: 2px 5px; }

        .wpcw_fe_toggle,
        .wpcw_fe_unit_progress { display: none; }

        .wpcw_fe_unit_complete { background: #DEFFD6; }

        .wpcw_fe_unit_complete {
            &, & a { color: green; }
        }
    }

    tr.wpcw_fe_module { cursor: pointer; }

    .wpcw_fe_toggle {
        text-align: right;
        vertical-align: top;
        font-size: 150%;
        font-weight: bold;
    }
}

/* Progress */
.wpcw_fe_unit_progress {
    span {
        display: block;
        height: 4.5ex;

        &:before {
            display: inline-block;
            font-size: 1.5em;
            content: '–';
            color: gray;
        }
    }

    &_complete span:before {
        content: '✓';
        color: green;
    }
}
/* ... */

